# MAVLink_sim

./: CMakeLists.txt  README.md  TODO.md  mavlink_sim.ini.example
docs/: modern-opengl-migration.md
resources/: map_locations.json  resources.qrc
resources/buildings/: nerima_sample.json
src/: main.cpp
src/core/: AppSettings.cpp  AppSettings.h  DroneSimulator.cpp  DroneSimulator.h  DroneState.h  FlightController.cpp  FlightController.h  GeoUtils.h  MapLocation.h  MapLocationLoader.cpp  MapLocationLoader.h  MissionManager.cpp  MissionManager.h
src/gui/: AttitudeIndicator.cpp  AttitudeIndicator.h  BuildingLoader.cpp  BuildingLoader.h  BuildingProvider.cpp  BuildingProvider.h  MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h  MapView3D.cpp  MapView3D.h  MissionPanel.cpp  MissionPanel.h  README.md  TelemetryPanel.cpp
src/gui/map3d/: BuildingLoader.cpp  BuildingProvider.cpp  Map3DMesh.cpp  Map3DMesh.h  MapView3D.cpp  MapView3D.h
src/gui/panels/: ControlPanel.cpp  ControlPanel.h  LogPanel.cpp  LogPanel.h  MissionPanel.cpp  TelemetryPanel.h
src/gui/widgets/: MapView.h
src/mavlink/: MavlinkManager.cpp  MavlinkManager.h  MavlinkUdpLink.cpp  MavlinkUdpLink.h  MessageHandler.cpp  MessageHandler.h
